fixed a wierd bug on ios
the entire body was offset by ~100px due to the bottom being set to -100px, don't know why, this fixed it

--- a/underwater/style.css
+++ b/underwater/style.css
@@ -1,7 +1,9 @@
 body{
+  position: sticky;
   overflow: hidden;
   box-sizing: border-box;
   margin: 0;
+  bottom: 0;
 }
 
 h1{
